--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://icons.iconarchive.com/icons/anton-gerasimenko/harry-potter/128/Nimbus-2000-icon.png" width="128" height="128" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>CodeNimbus</title>
   </head>
   <body>
     <div id="root"></div>
